--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+@import '@fontsource/manrope';
+@import 'ngx-toastr/toastr';
+
+
+body {
+  font-family: 'Manrope', sans-serif;
+}
