--- a/src/app/forget-password/forget-password.html
+++ b/src/app/forget-password/forget-password.html
@@ -1,5 +1,5 @@
 <section class="forget-password-section">
-  <div class="forget-password-container">
+  <div class="container-fluid">
     <div class="row">
       <div class="col-md-6">
         <div class="image-container">
@@ -18,11 +18,24 @@
             <h2 class="forget-password-title">Forget Password !!</h2>
           </div>
 
-          <form>
+          <form [formGroup]="ForgetPasswordForm" (ngSubmit)="onSubmit(ForgetPasswordForm)">
             <div class="mb-3">
               <label for="email" class="form-label">E-mail</label>
-              <input type="email" class="form-control" placeholder="john@mail.com"/>
+              <input type="email" class="form-control" placeholder="john@mail.com"
+              formControlName="email"
+              [class.is-invalid]="ForgetPasswordForm.get('email')?.invalid && ForgetPasswordForm.get('email')?.touched"
+              />
             </div>
+            @if (ForgetPasswordForm.get('email')?.errors && ForgetPasswordForm.get('email')?.touched) {
+              <div class="alert alert-danger">
+                @if (ForgetPasswordForm.get('email')?.errors?.['required']) {
+                  <p class="mb-0">Email is required</p>
+                }
+                @if (ForgetPasswordForm.get('email')?.errors?.['email']) {
+                  <p class="mb-0">Please enter a valid email address</p>
+                }
+              </div>
+            }
             <button type="submit" class="btn btn-forget-password">Send</button>
           </form>
         </div>
