--- a/src/app/forget-password/forget-password.scss
+++ b/src/app/forget-password/forget-password.scss
@@ -1,21 +1,26 @@
 .forget-password-section {
   min-height: 100vh;
-  background-color: #d9d9d9;
 }
-.forget-password-container {
+
+.container-fluid {
+  width: 100%;
   height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  padding: 0 25px;
+  padding: 0 !important;
+  margin: 0 !important;
 }
+
+
 .row {
   display: flex;
   width: 100%;
-  height: 100%;
-  margin: 0;
+  height: 100vh;
+  margin: 0 !important;
 }
+
 .col-md-6 {
   width: 50%;
+  padding: 0;
 }
 
 .image-container {
@@ -105,4 +110,15 @@
 }
 .btn-forget-password:hover {
   border-color: #6251dd;
+}
+
+.alert-danger{
+  background-color: #f8d7da;
+  border-color: #f5c2c7;
+  color: #842029;
+  border-radius: 4px;
+}
+p {
+  margin: 0;
+  font-size: 0.875rem;
 }
