--- a/src/app/login/login.scss
+++ b/src/app/login/login.scss
@@ -1,21 +1,26 @@
 .login-section {
   min-height: 100vh;
-  background-color: #d9d9d9;
 }
-.login-container {
+
+.container-fluid {
+  width: 100%;
   height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  padding: 0 25px;
+  padding: 0 !important;
+  margin: 0 !important;
 }
+
+
 .row {
   display: flex;
   width: 100%;
-  height: 100%;
-  margin: 0;
+  height: 100vh;
+  margin: 0 !important;
 }
+
 .col-md-6 {
   width: 50%;
+  padding: 0;
 }
 
 .image-container {
@@ -93,31 +98,6 @@
   border-color: #6366f1;
 }
 
-.form-check {
-  // width: 24px;
-  // height: 24px;
-  display: flex;
-  align-items: center;
-  margin-bottom: 24px;
-}
-.form-check-input {
-  width: 18px;
-  height: 18px;
-  border: 2px solid #6251dd;
-  border-radius: 4px;
-  margin: 0;
-}
-.form-check-label {
-  color: #6251dd;
-  font-size: 14px;
-  font-weight: 500;
-  margin-left: 10px;
-}
-
-.form-check-input:checked {
-  background-color: #6251dd;
-  border-color: #6251dd;
-}
 
 .btn {
   width: 100%;
@@ -153,4 +133,28 @@
 p {
   margin: 0;
   font-size: 0.875rem;
+}
+
+.password-wrapper {
+  position: relative;
+  width: 100%;
+}
+
+.password-toggle-icon {
+  position: absolute;
+  right: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  color: #6b7280;
+  font-size: 18px;
+  z-index: 10;
+}
+
+.password-toggle-icon:hover {
+  color: #374151;
+}
+
+.password-wrapper .form-control {
+  padding-right: 40px;
 }
